# cyber-recorder

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  utils.cpp
src/qml/: HomePage.qml  IconButton.qml  RecordPage.qml  Visualization.qml  main.qml
src/translations/: ar_AA.ts  az_AZ.ts  cs_CZ.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sr_RS.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  yue.ts  yue_HK.ts  zh_CN.ts  zh_Hans.ts  zh_Hant.ts  zh_Hant_HK.ts  zh_TW.ts
